--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@
     src: url('./font/DepotNew-Medium.ttf');
     src: url('./font/DepotNew-Bold.ttf');
     src: url('./font/DepotNew-Regular.ttf');
+    src: url('./font/DepotNew-Light.ttf');
 }
 
 .navbar {
@@ -178,36 +179,6 @@ header {
     position: relative;
 }
 
-/* .avatar {
-    width: 150px;
-    height: 150px;
-    box-sizing: border-box;
-    border-radius: 50%;
-    overflow: hidden;
-    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
-    transform: translatey(0px);
-    animation: float 6s ease-in-out infinite;
-    background: #052F71 0% 0% no-repeat padding-box;
-    opacity: 0.43;
-}
-
-@keyframes float {
-    0% {
-        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
-        transform: translatey(0px);
-    }
-
-    50% {
-        box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
-        transform: translatey(-20px);
-    }
-
-    100% {
-        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
-        transform: translatey(0px);
-    }
-} */
-
 .netnex-logo {
     vertical-align: middle;
     margin: auto;
@@ -241,9 +212,10 @@ header {
     z-index: 1;
 }
 
-.events-hoverme:hover{
+.events-hoverme:hover {
     cursor: pointer;
 }
+
 .header-section {
     position: relative;
     top: 0;
@@ -278,8 +250,9 @@ header {
 
 #counter .item {
     /* background: #fff; */
-    width: 300px;
-    /* height: 300px; */
+    width: 100%;
+    max-width: 300px;
+    min-width: 60px;
     margin: 0px;
     text-align: center;
     display: flex;
@@ -319,10 +292,12 @@ header {
 .second-section #counter .item img {
     position: absolute;
     transition: .8s;
+    margin-left: -100px;
 }
 
 .second-section #counter .item img:hover {
-    transform: rotate(40deg);
+    transform: translateY(30px);
+    transform: rotate(100deg);
 }
 
 .second-section #counter .item .number {
@@ -333,6 +308,15 @@ header {
 /* service page */
 .service-page {
     padding: 40px 0px;
+}
+
+.service-page h1 {
+    color: #4680C0;
+    font-size: 42px;
+}
+
+.service-page .grid-cover img {
+    margin: auto;
 }
 
 .grids {
@@ -346,8 +330,7 @@ header {
 .grid {
     max-width: 270px;
     height: 350px;
-    /* background-color: white; */
-    background: url(./images/backgrng-img.jpg) no-repeat center/cover, url(./images/blue-bg-istockphoto-905432958-612x612.jpg) no-repeat center/cover;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -357,28 +340,30 @@ header {
     margin: 20px 0px;
     text-align: justify;
     transition: .5s ease-in-out;
-    border: .1px solid rgb(245, 245, 245);
     border-radius: 20px;
 }
 
 .grid h3 {
     font-size: 20px;
-    font-weight: 800;
-    line-height: 32px;
-    text-transform: uppercase;
+    font-weight: 500;
+    line-height: 30px;
+    font-family: jost;
     text-align: start;
+    padding: 0px 20px;
+    padding-bottom: 5px;
 }
 
 .grid p {
     font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-
+    font-weight: lighter;
+    line-height: 22px;
+    text-align: start;
+    padding: 0px 20px;
+    color: #b4b4b4;
 }
 
 .grid:hover {
-    background: transparent linear-gradient(180deg, #FFFFFF 0%, #F1F1F1 100%) 0% 0% no-repeat padding-box;
-    box-shadow: 0px 28px 68px #00000029;
+    box-shadow: 0px 0px 48px #0000001e;
     border-radius: 21px;
 
 }
@@ -386,9 +371,25 @@ header {
 .btn-draw {
     color: white;
     background-color: #4680C0;
-    border-radius: 5px;
+    border-radius: 15px;
+    height: 30px;
+    width: 120px;
     padding: 5px 10px;
     font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 20px;
+}
+
+.btn-draw span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-draw span i {
+    font-weight: 600;
 }
 
 .service-page h6 {
@@ -402,14 +403,18 @@ header {
     padding: 50px 0px;
     width: 100%;
     /* height: 70vh; */
-    background: transparent radial-gradient(closest-side at 27% 28%, #2560BE 0%, #042E70 100%) 0% 0% no-repeat padding-box;
+    background: transparent radial-gradient(closest-side at 10% 50%, #2764C3 0%, #042E70 450%) 0% 0% no-repeat padding-box;
     opacity: 1;
+    position: relative;
 }
 
 
 .about-section h1 {
     padding: 50px 30px;
-    background-color: #164B9C;
+    background: #154A9B 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 44px #00000029;
+    border-radius: 18px;
+    opacity: 0.7;
     color: white;
     text-align: center;
     border-radius: 15px;
@@ -417,7 +422,82 @@ header {
 
 .about-section p {
     color: white;
+    z-index: 10;
 }
+
+.about-section ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    color: white;
+}
+
+.about-section ul li {
+    margin-left: -20px;
+}
+
+.ball-5 {
+    animation: float5 5.5s ease-in-out infinite;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    position: absolute;
+    top: 100px;
+    left: 320px;
+    opacity: .35;
+    background: #052F71 0% 0% no-repeat padding-box;
+    box-shadow: 0px 0px 50px #00000076;
+    opacity: 0.43;
+}
+
+@keyframes float5 {
+    0% {
+        transform: translatey(0px);
+    }
+
+    50% {
+        transform: translatey(-40px);
+    }
+
+    100% {
+        transform: translatey(0px);
+    }
+}
+
+.ball-6 {
+    animation: float6 6.5s ease-in-out infinite;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: 250px;
+    left: 300px;
+    opacity: .35;
+    background: #052F71 0% 0% no-repeat padding-box;
+    box-shadow: 0px 0px 30px #0000003b;
+    opacity: 0.43;
+    /* box-shadow: inset 0 0 20px #fff, inset 10px 0 46px #eaf5fc,
+      inset 88px 0px 60px #c2d8fe, inset -20px -60px 100px #fde9ea,
+      inset 0 50px 140px #fde9ea, 0 0 90px #fff; */
+}
+
+@keyframes float6 {
+    0% {
+        transform: translatey(0px);
+    }
+
+    50% {
+        transform: translatey(-40px);
+    }
+
+    100% {
+        transform: translatey(0px);
+    }
+}
+
+
 
 /* experts section */
 .experts-section {
@@ -427,6 +507,8 @@ header {
 .experts-section h1 {
     text-align: center;
     padding: 20px;
+    color: #4680C0;
+    font-size: 42px;
 }
 
 .uk-section {
@@ -468,14 +550,6 @@ header {
     margin: 0px !important;
 }
 
-/* Utilities */
-/* .auto-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill,
-            minmax(var(--auto-grid-min-size, 14rem), 1fr));
-    grid-gap: var(--auto-grid-gap, 0);
-    padding: 0;
-} */
 
 .flow>*+* {
     margin-top: var(--flow-space, 1em);
@@ -496,7 +570,8 @@ header {
     backface-visibility: hidden;
     text-decoration: none;
     overflow: hidden;
-    background-color: #1a4fa4a9;
+    /* background-color: #1a4fa4a9; */
+    background-image: linear-gradient(135deg, #1a4fa475, #123c7fe0);
 }
 
 .profile::before,
@@ -534,7 +609,7 @@ header {
 }
 
 .profile .logo {
-    width: 70px !important;
+    width: 90px !important;
     position: absolute;
     top: 0px;
     right: 0px;
@@ -590,7 +665,7 @@ header {
 
 .profile:hover img,
 .profile:focus img {
-    filter: grayscale(0);
+
     transform: scale(1.05) rotate(1deg);
 }
 
@@ -603,14 +678,19 @@ header {
 
 .portfolio-section h1 {
     text-align: center;
-    color: #83AAD4;
-    font-weight: 700;
+    color: #4680C0;
+    font-size: 42px;
 }
 
 
 .portfolio-position {
     position: relative;
     background-color: #f8f8f8;
+}
+
+.portpolios {
+    width: 100%;
+    max-width: 1400px;
 }
 
 .portfolio-section .event-tiles img {
@@ -623,7 +703,7 @@ header {
     position: absolute;
     top: 0;
     right: 0;
-    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.519), rgb(255, 255, 255), white);
+    background-image: linear-gradient(90deg, transparent, transparent, transparent, rgba(255, 255, 255, 0.974), rgb(255, 255, 255), white);
 }
 
 .portfolio-form .form-content h3 {
@@ -638,6 +718,8 @@ header {
     justify-content: center;
     height: 100%;
     margin: auto;
+    width: 100%;
+    max-width: 1300px;
 }
 
 .portfolio-form .submit-btn {
@@ -658,11 +740,20 @@ header {
 
 .clients-section h1 {
     text-align: center;
-    color: #4C84C2;
+    color: #4680C0;
+    font-size: 42px;
 }
 
-.clients-section .container .row div{
+.clients-section .container {
+    width: 100%;
+}
+
+.clients-section .container .row div {
+    /* height: 150px; */
     padding: 20px 0px;
+    margin: 10px 0px;
+    display: flex;
+    align-items: center;
 }
 
 .clients-section img {
@@ -683,6 +774,7 @@ header {
     border-radius: 5px;
     float: right;
     text-align: center;
+    margin: 20px 0px;
 }
 
 
@@ -711,6 +803,11 @@ header {
 
 .shadow-effect {
     width: 280px;
+    height: 370px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     background: #fff;
     padding: 20px;
     margin: auto;
@@ -746,10 +843,9 @@ header {
     color: #fff;
     box-shadow: 0 9px 18px rgba(0, 0, 0, 0.12), 0 5px 7px rgba(0, 0, 0, 0.05);
     text-decoration: none;
-
 }
 
-.infocorner-name :hover{
+.infocorner-name :hover {
     outline-offset: white;
     text-decoration: none !important;
 }
@@ -764,6 +860,7 @@ header {
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+    
 }
 
 #customers-infocorner .owl-item.active.center .item {
@@ -803,11 +900,19 @@ header {
 
 
 /* testimonial section */
+.testimonial-section {
+    background: #edf2f8;
+    padding: 50px 0px;
+}
+
+.testimonial-section h1 {
+    text-align: center;
+    color: #4680C0;
+}
 
 .outerdiv {
     width: 100%;
     /* min-height: 100vh; */
-    background: #edf2f8;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -817,13 +922,13 @@ header {
     transform: scale(0.9);
     /* margin: 1rem; */
     display: grid;
-    grid-gap: 1.5rem;
+    grid-gap: 1.9rem;
     /* grid-template-rows: repeat(2, 20rem); */
     grid-template-columns: repeat(4, 17rem);
 }
 
 .eachdiv {
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     border-radius: 0.8rem;
     box-shadow: 5px 5px 20px #6d6b6b6b;
     color: white;
@@ -860,8 +965,39 @@ header {
 
 .div5 {
     background: #18202d;
-    grid-column: 2/4;
+    /* grid-column: 1/; */
     grid-row: 2/3;
+}
+
+.div6 {
+    background: #D6E4F0;
+
+    grid-column: 3/3;
+    grid-row: 3/4;
+}
+
+.div6 p {
+    color: rgb(0, 0, 0) !important;
+}
+
+.div7 {
+    background: #733fc8;
+    grid-column: 4/4;
+    grid-row: 3/4;
+    background-repeat: no-repeat;
+    background-position-x: 25rem;
+}
+
+.div8 {
+    background: #49556b;
+    grid-column: 2/2;
+    grid-row: 2/4;
+}
+
+.div9 {
+    background: #144694;
+    grid-column: 1/1;
+    grid-row: 3/3;
 }
 
 .userdetails {
@@ -873,8 +1009,7 @@ header {
 }
 
 .imgbox img {
-    border-radius: 50%;
-    width: 4rem;
+    width: 6rem;
     border: 2px solid #cec5c5;
 }
 
@@ -922,11 +1057,11 @@ header {
 }
 
 .review p {
-    font-size: 0.95rem;
+    font-size: 1.25rem;
     color: #f3deff;
     font-weight: 500;
     opacity: 50%;
-    line-height: 1.5;
+    line-height: 1.6rem;
     padding: 20px 0px;
 }
 
@@ -993,10 +1128,14 @@ header {
 }
 
 .memory-section .title h1 {
-    font-size: 30px;
+    background-color: #1A4FA3;
+    margin: auto;
+    border-radius: 20px;
     color: white;
+    opacity: 0.6;
     font-family: 'Depot', sans-serif;
 }
+
 
 .memory-section .title p {
     font-size: 12px;
@@ -1019,7 +1158,7 @@ header {
 }
 
 .memory-section .slick-slide {
-    margin: 10px;
+    margin: 5px;
 }
 
 .memory-section .slick-slide img {
@@ -1037,6 +1176,17 @@ header {
     border: none;
     box-shadow: none;
     background-color: transparent;
+}
+
+.memory-section .card .card-header img {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    transition: all 1s;
+}
+
+.memory-section .card .card-header img:hover {
+    -webkit-filter: none !important;
+    filter: none !important;
 }
 
 .memory-section .card-body {
@@ -1220,8 +1370,6 @@ form label {
         padding: 10px 0px !important;
     }
 
-
-
     .navbar .logo {
         margin: 0px !important;
     }
@@ -1232,6 +1380,86 @@ form label {
 
     .navbar-toggler {
         padding: 2px;
+    }
+
+    .compound {
+        display: none;
+    }
+
+    .ball-1 {
+        position: absolute;
+        top: 190px;
+        left: 0px;
+    }
+
+
+    .ball-2 {
+        position: absolute;
+        top: 60vh;
+        right: 0px;
+    }
+
+    .ball-3 {
+        display: none;
+    }
+
+
+    .ball-4 {
+        display: none;
+    }
+
+    /* second-page */
+
+    #counter .item {
+        width: 50%;
+        margin: 5px 0px;
+    }
+
+    #counter .item .count {
+        color: #4680C0;
+        margin-bottom: 5px;
+        font-size: 28px;
+        font-weight: 600;
+    }
+
+    .item-sub-div h2 {
+        color: #4680C0;
+        font-size: 28px;
+        font-weight: 600;
+    }
+
+    #counter .item h3 {
+        color: #4680C0;
+        text-transform: capitalize;
+        text-align: center;
+        font-size: 16px;
+    }
+
+    .second-section #counter .item img {
+        width: 80px;
+        margin-left: -40px;
+    }
+
+    .header-section p {
+        padding: 20px;
+    }
+
+
+    /* about-section */
+    .ball-5 {
+
+        position: absolute;
+        top: 100px;
+        left: 0px;
+        opacity: .35;
+
+    }
+
+    .ball-6 {
+        position: absolute;
+        top: 250px;
+        left: 0px;
+
     }
 
     /* client section */
@@ -1257,15 +1485,14 @@ form label {
 
 
     /* clients section */
-    /* .clients-section img{
-        width: 100px !important;
-    } */
+
 
     /* section 10 */
     .contact-div2 {
         width: 90%;
         text-align: justify;
     }
+
 
     /*contact form */
 
@@ -1308,6 +1535,12 @@ form label {
         background-color: #1e1f26da;
     }
 
+    /* testimony section */
+    
+    .outerdiv {
+        width: 100%;
+        height: 75vh;
+    }
 
     /* section 10 */
     .contact-div2 {
